# cppWebServer

./: README.md  main.cpp  main.cpp.linux
controller/default/: defaultController.cpp
linux/: CMakeLists.txt  main.cpp
linux/controller/default/: defaultController.cpp  defaultController.h
linux/server/: clientHandle.cpp  clientHandle.h  controllerLogic.h  routingLogic.h
linux/view/default/: Index.html
server/: clientHandle.cpp  routingLogic.cpp  routingLogic.h
win/: CMakeLists.txt
win/server/: clientHandle.h
